Fix comment body alignment
This makes all comment content left-aligned.

--- a/reddit-comments.css
+++ b/reddit-comments.css
@@ -13,11 +13,13 @@
 }
 
 .reddit-comment .rc-comment {
-    margin: 5px 0 0;
+    margin: 5px 0 0 20px;
+    overflow: hidden;
+    min-height: 20px;
 }
 
 .reddit-comment .rc-comment p {
-    margin: 10px;
+    margin: 10px 0 0;
     line-height: 20px;
 }
 
